Lab3/make.out
src/main.cc:215:9: error: no matching constructor for initialization of 'ReuleauxTriangle'
        ReuleauxTriangle({ Point2D(0,5), Point2D(5,0), Point2D(-5,0) });
        ^                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/reuleauxtriangle.h:17:7: note: candidate constructor (the implicit move constructor) not viable: cannot convert initializer list argument to 'ReuleauxTriangle'
class ReuleauxTriangle : public Containable2D {
      ^
include/reuleauxtriangle.h:17:7: note: candidate constructor (the implicit copy constructor) not viable: cannot convert initializer list argument to 'const ReuleauxTriangle'
include/reuleauxtriangle.h:22:9: note: candidate constructor not viable: cannot convert initializer list argument to 'std::vector<Point2D> *'
        ReuleauxTriangle(std::vector<Point2D> vertices[3]);
        ^
src/main.cc:214:22: error: variable type 'ReuleauxTriangle' is an abstract class
    ReuleauxTriangle outer =
                     ^
include/containable.h:34:22: note: unimplemented pure virtual method 'containedWithin' in 'ReuleauxTriangle'
        virtual bool containedWithin(Circle &circle) = 0;
                     ^
include/containable.h:35:22: note: unimplemented pure virtual method 'containedWithin' in 'ReuleauxTriangle'
        virtual bool containedWithin(RegularConvexPolygon &polygon) = 0;
                     ^
include/containable.h:36:22: note: unimplemented pure virtual method 'containedWithin' in 'ReuleauxTriangle'
        virtual bool containedWithin(ReuleauxTriangle &rt) = 0;
                     ^
2 errors generated.
src/polygon.cc:81:28: error: use of undeclared identifier 'polygon'
    Line line(Geom::center(polygon), Geom::center(*this)); // Centers of polygon
                           ^
src/polygon.cc:82:29: error: use of undeclared identifier 'polygon'
    for (Line const &edge : polygon.edges()) {
                            ^
2 errors generated.
src/reuleauxtriangle.cc:14:19: error: out-of-line definition of 'ReuleauxTriangle' does not match any declaration in 'ReuleauxTriangle'
ReuleauxTriangle::ReuleauxTriangle(std::vector<Point2D> vertices) {
                  ^~~~~~~~~~~~~~~~
include/reuleauxtriangle.h:22:26: note: type of 1st parameter of member declaration does not match definition ('std::vector<Point2D> *' vs 'std::vector<Point2D>')
        ReuleauxTriangle(std::vector<Point2D> vertices[3]);
                         ^
src/reuleauxtriangle.cc:32:23: error: out-of-line definition of 'vertexCount' does not match any declaration in 'ReuleauxTriangle'
int ReuleauxTriangle::vertexCount() {
                      ^~~~~~~~~~~
src/reuleauxtriangle.cc:39:24: error: out-of-line definition of 'containedWithin' does not match any declaration in 'ReuleauxTriangle'; did you mean 'containedWithIn'?
bool ReuleauxTriangle::containedWithin(Circle &circle) {
                       ^~~~~~~~~~~~~~~
                       containedWithIn
include/reuleauxtriangle.h:28:14: note: 'containedWithIn' declared here
        bool containedWithIn(Circle &circle);
             ^
src/reuleauxtriangle.cc:55:24: error: out-of-line definition of 'containedWithin' does not match any declaration in 'ReuleauxTriangle'; did you mean 'containedWithIn'?
bool ReuleauxTriangle::containedWithin(RegularConvexPolygon &polygon) {
                       ^~~~~~~~~~~~~~~
                       containedWithIn
include/reuleauxtriangle.h:29:14: note: 'containedWithIn' declared here
        bool containedWithIn(RegularConvexPolygon &polygon);
             ^
src/reuleauxtriangle.cc:81:24: error: out-of-line definition of 'containedWithin' does not match any declaration in 'ReuleauxTriangle'; did you mean 'containedWithIn'?
bool ReuleauxTriangle::containedWithin(ReuleauxTriangle &rt) {
                       ^~~~~~~~~~~~~~~
                       containedWithIn
include/reuleauxtriangle.h:30:14: note: 'containedWithIn' declared here
        bool containedWithIn(ReuleauxTriangle &rt);
             ^
5 errors generated.
